--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
             </div>
 
         </section>
+        <header>
+            <span>
+                PIC <input type="search">
+                PIC
+                PIC
+                Mohamed Hassan
+            </span>
+            <div>
+                <span>PIC</span>
+                <span>
+                    Hi their, <br> Mohamed Hassan (@walaalka)
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </span>
+            </div>
+        </header>
     </div>
 </body>
 </html>
